Adjust sidebar and quick navigation links

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,10 +1,11 @@
 <nav>
     <ul>
+        <li>
+            <a href="/" {% if page.url == '/' %}class="current"{% endif %}>Home</a>
+        </li>
     {% for item in site.data.navigation %}
         <li>
-            <a href="{{ item.link }}" {% if page.url == item.link %}class="current"{% endif %}>
-                {{ item.name }}
-            </a>
+            <a href="{{ item.link }}" {% if page.url == item.link %}class="current"{% endif %}>{{ item.name }}</a>
         </li>
     {% endfor %}
     </ul>
