--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -5,6 +5,10 @@ layout: default
 
 {{ content }}
 
+<p>
+    See <a href="https://github.com/plantuml/plantuml/tree/master/themes/puml-theme-{{ page.short_name }}.puml">{{ page.name }}</a> for theme details.
+</p>
+
 <h3>Diagrams</h3>
 
 {% for diagram in site.data.diagrams %}
