--- a/_includes/figure.html
+++ b/_includes/figure.html
@@ -1,8 +1,10 @@
 <figure class="image-box">
     <a href="{{ include.url }}">
-        <img src="{{ include.file }}"
+        <img src="../gallery/img/{{ include.file }}"
                 alt="{{ include.alt }}"
                 loading="lazy" />
     </a>
+{% if include.caption %}
     <figcaption class="image-description">{{ include.caption }}</figcaption>
+{% endif %}
 </figure>
