--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,30 +8,53 @@
   font-weight: bold;
 }
 
-/*! div style */
+/*! Image Gallery Style */
 .image-gallery {
-  width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-  justify-content: center;
-  padding: 4px;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+
+  .image-box {
+    background-color: #ccc;
+    border: 1px solid #0D0D0D;
+    border-radius: 4px;
+
+    transform: scale(1);
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      transform: scale(1.75);
+      z-index: 10;
+
+      img {
+        object-fit: contain;
+      }
+    }
+
+    a {
+      display: block;
+    }
+
+    img {
+      width: 100%;
+      object-fit: cover;
+      aspect-ratio: 4/3;
+      margin: 0;
+      padding: 0;
+      border: none;
+      border-top-left-radius: 4px;
+      border-top-right-radius: 4px;
+    }
+
+    .image-description {
+      background-color: darken(#ccc, 15%);
+      padding: 6px;
+    }
+  }
 }
 
-.box {
-  flex-basis: 25%;
-  width: 100%;
-  /* padding: 10px; */
-  margin: 2px;
-}
-
-.img-gallery {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  transform: scale(1);
-  transition: all 0.3s ease-in-out;
-
-  &:hover {
-    transform: scale(1.05);
+@media print, screen and (max-width: 640px) {
+  .image-gallery {
+    grid-template-columns: 1fr;
   }
 }
