--- a/_includes/mainNavigation.html
+++ b/_includes/mainNavigation.html
@@ -1,5 +1,20 @@
 {% for item in site.data.mainNavigation %}
+
 <li>
-    <a href="{{ item.link }}" {% if page.url== item.link %}class="currentPage" {% endif %}>{{ item.name }}</a>
+
+{% if page.url == item.link %}
+
+    <a class="menu-item{% if page.kind== item.kind %} currentKind{% endif %}"
+            aria-current="page"
+            href="{{ item.link }}">{{ item.name }}</a>
+
+{% else %}
+
+    <a class="menu-item{% if page.kind== item.kind %} currentKind{% endif %}"
+            href="{{ item.link }}">{{ item.name }}</a>
+
+{% endif %}
+
 </li>
+
 {% endfor %}
