--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <h2>{{ page.display_name }}</h2>
 
-{% include subNavigation.html %}
+{% include secondaryNavigation.html %}
 
 {{ content }}
 
