--- a/_layouts/diagram.html
+++ b/_layouts/diagram.html
@@ -9,7 +9,7 @@ layout: default
 
 <h3>Diagram Code</h3>
 
-This diagram was created by the following PlantUML code:
+This diagram was created from the following PlantUML code:
 
 <pre>
     <code class="language-puml">
@@ -17,21 +17,15 @@ This diagram was created by the following PlantUML code:
     </code>
 </pre>
 
-<h3>Theme Gallery</h3>
+<h3>Available Themes</h3>
 
 {% for theme in site.themes %}
 
-<h4>{{ page.display_name }} in {{ theme.display_name }}</h4>
+<h4 id="{{ theme.name }}">{{ page.display_name }} shown in {{ theme.display_name }}</h4>
 
-{% capture url %}
-{{ theme.url }}#{{ page.name }}
-{% endcapture %}
-{% capture file %}
-{{ page.name }}-{{ theme.name }}.svg
-{% endcapture %}
-{% capture alt %}
-{{ page.display_name }} in {{ theme.display_name }}
-{% endcapture %}
+{% capture url %}{{ theme.url }}#{{ page.name }}{% endcapture %}
+{% capture file %}{{ page.name }}-{{ theme.name }}.svg{% endcapture %}
+{% capture alt %}{{ page.display_name }} in {{ theme.display_name }}{% endcapture %}
 
 {% include figure.html url=url file=file alt=alt %}
 
