--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,6 +10,7 @@ nav {
       font-style: italic;
     }
   }
+
   &.secondary {
     ul {
       display: flex;
@@ -36,13 +37,33 @@ nav {
   }
 }
 
+/* Image Style outside of Gallery View */
+figure.image-box {
+  img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  figcaption {
+    padding: 6px;
+    text-align: center;
+  }
+
+  &.with-caption img {
+    margin-bottom: 0;
+  }
+}
+
 /*! Image Gallery Style */
 .image-gallery {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
 
-  .image-box {
+  margin-bottom: 22px;
+
+  figure.image-box {
     background-color: #ccc;
     border: 1px solid #0D0D0D;
     border-radius: 4px;
@@ -74,9 +95,9 @@ nav {
       border-top-right-radius: 4px;
     }
 
-    .image-description {
+    figcaption {
       background-color: darken(#ccc, 15%);
-      padding: 6px;
+      text-align: left;
     }
   }
 }
