Adjust configs and scripts to moved diagram definitions
Issue: #3

--- a/_includes/figure.html
+++ b/_includes/figure.html
@@ -1,6 +1,6 @@
 <figure class="image-box{% if include.caption %} with-caption{% endif %}">
     <a href="{{ include.url }}">
-        <img src="/assets/diagrams/{{ include.file }}"
+        <img src="/gallery/{{ include.file }}"
                 alt="{{ include.alt }}"
                 loading="lazy" />
     </a>
