--- a/_includes/figure.html
+++ b/_includes/figure.html
@@ -1,6 +1,6 @@
 <figure class="image-box{% if include.caption %} with-caption{% endif %}">
     <a href="{{ include.url }}">
-        <img src="/gallery/{{ include.diagram.name }}-{{ include.theme.name}}.svg"
+        <img src="/gallery/lightmode/{{ include.diagram.name }}-{{ include.theme.name}}.svg"
                 alt="{{ include.diagram.display_name }} in {{ include.theme.display_name}}"
                 loading="lazy" />
     </a>
