--- a/_includes/secondaryNavigation.html
+++ b/_includes/secondaryNavigation.html
@@ -12,7 +12,7 @@
 
 {% else %}
 
-            <a class="menu-item" href="{{ item.link | relative_url }}">{{ item.name }}</a>
+            <a class="menu-item" href="{{ item.link }}">{{ item.name }}</a>
 
 {% endif %}
 
