--- a/_layouts/stdlib.html
+++ b/_layouts/stdlib.html
@@ -7,7 +7,7 @@ layout: default
 
 {{ content }}
 
-<h3>Sdtlib Diagram Code</h3>
+<h3>Standard Library Diagram Code</h3>
 
 This diagram was created from the following PlantUML code:
 
