--- a/_layouts/skin.html
+++ b/_layouts/skin.html
@@ -21,7 +21,13 @@ layout: default
 <h4 id="{{ diagram.name }}">{{ diagram.display_name }} shown in {{ page.display_name }}</h4>
 
 {% capture url %}{{ diagram.url }}#{{ page.name }}{% endcapture %}
+{% capture main_caption %}Main {{ diagram.display_name }}{% endcapture %}
 
-{% include figure.html theme=page diagram=diagram url=url %}
+{% include figure.html theme=page diagram=diagram url=url caption=main_caption %}
 
+{% for variant in diagram.variants %}
+
+{% include figure.html theme=page diagram=variant url=url caption=variant.display_name %}
+
+{% endfor %}
 {% endfor %}
