Small additions and cleanups to #3 (#10)
* Add test function for correct link and source structure

Issue: #3

* Introduce liquid link tag where appropriate

Issue: #3

* Fix PlantUML version information

Issue: #3

* Extend README to describe more extension points

Issue: #3

* Fix name in the main navigation but use "Standard Libraries" everywhere else

Issue: #3

* Add missing direct access from home page

Issue: #3

* Use Jekyll's own tags for highlighting

Issue: #3

* Fix indentation in generated site

Issue: #3

* Fix merge mistake

Issue: #3

--- a/_layouts/diagram.html
+++ b/_layouts/diagram.html
@@ -11,11 +11,10 @@ layout: default
 
 This diagram was created from the following PlantUML code:
 
-<pre>
-    <code class="language-puml">
-{% include_relative input/{{ page.name }}.puml %}
-    </code>
-</pre>
+{% capture my_code %}{% include_relative input/{{ page.name }}.puml %}{% endcapture %}
+{% highlight plantuml %}
+{{ my_code | strip }}
+{% endhighlight %}
 
 <h3>Available Themes</h3>
 
