--- a/_layouts/stdlib.html
+++ b/_layouts/stdlib.html
@@ -7,13 +7,13 @@ layout: default
 
 {{ content }}
 
-<h3>Sdtlib Diagram Code</h3>
+<h3>Standard Library Diagram Code</h3>
 
 This diagram was created from the following PlantUML code:
 
 {% capture my_code %}{% include_relative input/{{ page.name }}.puml %}{% endcapture %}
 {% highlight plantuml %}
-   {{ my_code | strip }}
+{{ my_code | strip }}
 {% endhighlight %}
 
 <h3>Available Themes</h3>
