♻️ refactor diagram and stdlib layout on the same diag layout

--- a/_layouts/stdlib.html
+++ b/_layouts/stdlib.html
@@ -1,41 +1,4 @@
 ---
-layout: default
+layout: diag
+display_name: Standard Library Diagram
 ---
-<h2>{{ page.display_name }}</h2>
-
-{% include secondaryNavigation.html %}
-
-{{ content }}
-
-<h3>Standard Library Diagram Code</h3>
-
-This diagram was created from the following PlantUML code:
-
-{% capture my_code %}{% include_relative input/{{ page.name }}.puml %}{% endcapture %}
-{% highlight plantuml %}
-{{ my_code | strip }}
-{% endhighlight %}
-
-<h3>Available Themes</h3>
-
-{% for theme in site.themes %}
-
-<h4 id="{{ theme.name }}">{{ page.display_name }} shown in {{ theme.display_name }}</h4>
-
-{% capture url %}{{ theme.url }}#{{ page.name }}{% endcapture %}
-
-{% include figure.html theme=theme diagram=page url=url %}
-
-{% endfor %}
-
-<h3>Available Skins</h3>
-
-{% for skin in site.skins %}
-
-<h4 id="{{ skin.name }}">{{ page.display_name }} shown in {{ skin.display_name }}</h4>
-
-{% capture url %}{{ skin.url }}#{{ page.name }}{% endcapture %}
-
-{% include figure.html theme=skin diagram=page url=url %}
-
-{% endfor %}
