♻️ refactor add availableDiagrams.html on include

--- a/_layouts/skin.html
+++ b/_layouts/skin.html
@@ -14,14 +14,4 @@ layout: default
     page.display_name }}</a> for the skin's implementation details.
 </p>
 
-<h3>Available Diagrams</h3>
-
-{% for diagram in site.diagrams %}
-
-<h4 id="{{ diagram.name }}">{{ diagram.display_name }} shown in {{ page.display_name }}</h4>
-
-{% capture url %}{{ diagram.url }}#{{ page.name }}{% endcapture %}
-
-{% include figure.html theme=page diagram=diagram url=url %}
-
-{% endfor %}
+{% include availableDiagrams.html %}
