♻️ rename includes on liquids

--- a/_includes/availableDiagrams.liquid
+++ b/_includes/availableDiagrams.liquid
@@ -3,5 +3,5 @@
 {% for diagram in site.diagrams %}
 <h4 id="{{ diagram.name }}">{{ diagram.display_name }} shown in {{ page.display_name }}</h4>
 {% capture url %}{{ diagram.url }}#{{ page.name }}{% endcapture %}
-{% include figure.html theme=page diagram=diagram url=url %}
+{% include figure.liquid theme=page diagram=diagram url=url %}
 {% endfor %}
