--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 
         <nav class="main" aria-label="main navigation">
             <ul>
-                {% include mainNavigation.html %}
+                {% include mainNavigation.liquid %}
                 {% if site.show_downloads %}
                 <li class="download"><a class="buttons" href="{{ site.github.zip_url }}">Download ZIP</a></li>
                 <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Download TAR</a></li>
