--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <h2>{{ page.display_name }}</h2>
 
-{% include secondaryNavigation.html %}
+{% include secondaryNavigation.liquid %}
 
 {{ content }}
 
@@ -14,4 +14,4 @@ layout: default
     page.display_name }}</a> for the theme's implementation details.
 </p>
 
-{% include availableDiagrams.html %}
+{% include availableDiagrams.liquid %}
