Combine diagram variants into one document (#11)
* Combine multiple diagrams collection documents into one per diagram type

* Adjust dedicated page layouts to include the diagram's variants too

Issue: #5

* Borrow diagram descriptions from PlantUML directly

Issue: #5

* Add matching author information

Issue: #5

* Fix internal link structure and incorporate the baseurl again

* Update Activity.md

* Update Class.md

* Update Deployment.md

* Update EBNF.md

* Update Gantt.md

* Update JSON.md

* Update Mindmap.md

* Update Nwdiag.md

* Update REGEX.md

* Update Sequence.md

* Update State.md

* Update Timing.md

* Update UseCase.md

* Update WBS.md

* Update YAML.md

* Update Object.md

* Update Salt.md

* Update readme.md

* Update _config.yml

---------

Co-authored-by: The-Lum <86879521+The-Lum@users.noreply.github.com>

--- a/_includes/availableDiagrams.liquid
+++ b/_includes/availableDiagrams.liquid
@@ -2,6 +2,12 @@
 
 {% for diagram in site.diagrams %}
 <h4 id="{{ diagram.name }}">{{ diagram.display_name }} shown in {{ page.display_name }}</h4>
+
 {% capture url %}{{ diagram.url }}#{{ page.name }}{% endcapture %}
-{% include figure.liquid theme=page diagram=diagram url=url %}
+{% capture main_caption %}Main {{ diagram.display_name }}{% endcapture %}
+{% include figure.liquid theme=page diagram=diagram url=url caption=main_caption %}
+
+{% for variant in diagram.variants %}
+{% include figure.liquid theme=page diagram=variant url=url caption=variant.display_name %}
+{% endfor %}
 {% endfor %}
