--- a/_layouts/diag.html
+++ b/_layouts/diag.html
@@ -20,14 +20,26 @@ This diagram was created from the following PlantUML code:
 
 {% for theme in site.themes %}
 <h4 id="{{ theme.name }}">{{ page.display_name }} shown in {{ theme.display_name }}</h4>
+
 {% capture url %}{{ theme.url }}#{{ page.name }}{% endcapture %}
-{% include figure.liquid theme=theme diagram=page url=url %}
+{% capture main_caption %}Main {{ page.display_name }}{% endcapture %}
+{% include figure.liquid theme=theme diagram=page url=url caption=main_caption %}
+
+{% for variant in page.variants %}
+{% include figure.liquid theme=theme diagram=variant url=url caption=variant.display_name %}
+{% endfor %}
 {% endfor %}
 
 <h3>Available Skins</h3>
 
 {% for skin in site.skins %}
 <h4 id="{{ skin.name }}">{{ page.display_name }} shown in {{ skin.display_name }}</h4>
+
 {% capture url %}{{ skin.url }}#{{ page.name }}{% endcapture %}
-{% include figure.liquid theme=skin diagram=page url=url %}
+{% capture main_caption %}Main {{ page.display_name }}{% endcapture %}
+{% include figure.liquid theme=skin diagram=page url=url caption=main_caption %}
+
+{% for variant in page.variants %}
+{% include figure.liquid theme=skin diagram=variant url=url caption=variant.display_name %}
+{% endfor %}
 {% endfor %}
