--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -10,8 +10,26 @@ layout: default
 <h3>Theme Code</h3>
 
 <p>
-    See <a href="https://github.com/plantuml/plantuml/tree/master/themes/puml-theme-{{ page.name }}.puml">PlantUML themes {{
+    See <a href="https://github.com/plantuml/plantuml/tree/master/themes/puml-theme-{{ page.name }}.puml">PlantUML
+    themes {{
     page.display_name }}</a> for the theme's implementation details.
 </p>
+
+{% if page.variants %}
+<h3>Other Theme Variants</h3>
+
+<p>
+    The theme is available in different variants.
+</p>
+
+{% for variant in page.variants %}
+{% assign current_variant = site.themes | where:"name", variant.name  | first %}
+
+{% capture url %}{{ current_variant.url }}{% endcapture %}
+{% capture main_caption %}Variant {{ current_variant.display_name }}{% endcapture %}
+{% include figure.liquid theme=current_variant diagram=site.default_diagram url=url caption=main_caption %}
+
+{% endfor %}
+{% endif %}
 
 {% include availableDiagrams.liquid %}
