--- a/_includes/linkToPage.liquid
+++ b/_includes/linkToPage.liquid
@@ -20,7 +20,7 @@ Go to the [{{ linked_theme.display_name }}]({{ linked_theme.url | relative_url }
 {% if include.diagram %}
 {% assign linked_diagram = include.diagram %}
 
-{% if linked_diagram.variants %}
+{% if linked_diagram.examples %}
 There are multiple examples available avaiable for this diagram type.
 Go to the [{{ linked_diagram.display_name }}]({{ linked_diagram.url | relative_url }}) page to see all examples in all themes.
 {% else %}
