Fix small mistakes
Issue: #6

--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -19,7 +19,7 @@ layout: default
 <h3>Other Theme Variants</h3>
 
 <p>
-    The theme is available in different variants.
+    This theme is available in different variants.
 </p>
 
 {% for variant_name in page.variants %}
