--- a/_includes/linkToPage.liquid
+++ b/_includes/linkToPage.liquid
@@ -21,7 +21,7 @@ Go to the [{{ linked_theme.display_name }}]({{ linked_theme.url | relative_url }
 {% assign linked_diagram = include.diagram %}
 
 {% if linked_diagram.examples %}
-There are multiple examples available avaiable for this diagram type.
+There are multiple examples available for this diagram type.
 Go to the [{{ linked_diagram.display_name }}]({{ linked_diagram.url | relative_url }}) page to see all examples in all themes.
 {% else %}
 Go to the [{{ linked_diagram.display_name }}]({{ linked_diagram.url | relative_url }}) page to see this diagram in all themes.
