Reduce title column width by rotating the text

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -132,6 +132,7 @@ table.image-gallery {
   th.sticky {
     position: sticky;
     left: 0; /* Don't forget this, required for the stickiness */
+    writing-mode: sideways-lr;
   }
 
   figure.image-box {
