Organize theme variants (#14)
* Add variant information and mark the main variant

Issue: #6

* Show only the main variant of a theme on overview pages

The diagram pages still show all variants of a theme.

Issue: #6

* Show all variants of a theme on theme-specific pages

Issue: #6

* Mention theme/diagram variants when linking to specific pages

Issue: #6

* Simplify theme variants structure

Issue: #6

* Switch diagram `variants` to `examples` naming scheme

This should hopefully reduce my confusion.

Issue: #6

* Fix small mistakes

Issue: #6

* Fix deep links to PlantUML repository

Issue: #6

--- a/_layouts/diag.html
+++ b/_layouts/diag.html
@@ -46,8 +46,8 @@ This diagram was created from the following PlantUML code:
 {% capture main_caption %}Main {{ page.display_name }}{% endcapture %}
 {% include figure.liquid theme=theme diagram=page url=url caption=main_caption %}
 
-{% for variant in page.variants %}
-{% include figure.liquid theme=theme diagram=variant url=url caption=variant.display_name %}
+{% for example in page.examples %}
+{% include figure.liquid theme=theme diagram=example url=url caption=example.display_name %}
 {% endfor %}
 {% endfor %}
 
@@ -60,7 +60,7 @@ This diagram was created from the following PlantUML code:
 {% capture main_caption %}Main {{ page.display_name }}{% endcapture %}
 {% include figure.liquid theme=skin diagram=page url=url caption=main_caption %}
 
-{% for variant in page.variants %}
-{% include figure.liquid theme=skin diagram=variant url=url caption=variant.display_name %}
+{% for example in page.examples %}
+{% include figure.liquid theme=skin diagram=example url=url caption=example.display_name %}
 {% endfor %}
 {% endfor %}
